<resources>
    <string name="app_name">DogAPI2Recycler</string>
    <string name="get_started">Get Started</string>
    <string name="view_list">View List</string>
    <string name="view_grid">View Grid</string>
    <string name="button_for_grid">button for Grid</string>
    <string name="button_for_list">Button for List</string>
    <string name="dog_breeds">Dog Breeds</string>
    <string name="dog_image">Dog Image</string>
    <string name="name">Name</string>
    <string name="breed_group">Breed Group</string>
    <string name="life_span">Life Span</string>
    <string name="dog_images">Dog Images</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="details">Details</string>
    <string name="back_navigation_button">Back navigation button</string>
    <string name="hello">Hello</string>
    <string name="more_information">More Information:</string>
    <string name="origin">Origin :</string>
    <string name="Origin">Origin</string>
    <string name="height">Height :</string>
    <string name="Height">Height</string>
    <string name="weight">Weight :</string>
    <string name="Weight">Weight</string>
    <string name="breed_for">Breed for :</string>
    <string name="Breed_for">Breed for</string>
    <string name="temperament">Temperament :</string>
    <string name="Temperament">Temperament</string>
    <string name="no_results_found">No Results Found</string>
    <string name="mixed">Mixed</string>
    <string name="https_cdn2_thedogapi_com_images">https://cdn2.thedogapi.com/images/</string>
    <string name="dog">Dog</string>
    <string name="Mixed">Mixed</string>
    <string name="cattle_herding">Cattle Herding</string>
    <string name="_10_years">10 years</string>
    <string name="loyal_brave">Loyal, Brave</string>
    <string name="united_kingdom">United Kingdom</string>
    <string name="hjq8ge5v7">HJQ8ge5V7</string>
    <string name="woof">Woof!</string>
    <string name="perfect_pup_in_a_single_search">Perfect pup in a single search</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="don_t_have_account">Don\'t have an Account-</string>
    <string name="dog_image_launch">Dog image</string>
    <string name="already_have_an_account">Already have an Account-</string>
    <string name="logout_button">logout button</string>
    <string name="profile_button">profile button</string>
    <string name="x">X</string>
    <string name="logout">Logout</string>
    <string name="login_confirmation">Logout Confirmation</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="add_new_user">Add new User</string>
    <string name="add_user">Add User</string>
    <string name="new_user">New User</string>
    <string name="users">Users</string>
</resources>