<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MainActivity"
        android:background="@drawable/bg_theme">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/profileBtn"
            android:contentDescription="@string/profile_button"
            android:text="@string/x"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:fontFamily="@font/fredoka_variable_font"
            android:background="@drawable/start_act_btn"
            android:textColor="@color/white"
            android:layout_margin="25dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/logoutBtn"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:onClick="userList"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="25dp"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15sp"
            android:fontFamily="@font/fredoka_variable_font"
            android:background="@drawable/start_act_btn"
            android:onClick="logOutUser"
            />

        <TextView
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:text="@string/get_started"
            android:textSize="45sp"
            android:textStyle="bold"
            android:fontFamily="@font/poetsen_one_regular"
            android:textColor="@color/white"
            app:layout_constraintVertical_bias="0.35"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/listView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="@id/start"
            app:layout_constraintTop_toBottomOf="@+id/start">

            <TextView
                android:id="@+id/listTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/view_list"
                android:textSize="25sp"
                android:fontFamily="@font/poetsen_one_regular"
                android:onClick="toListAct"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/listBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/button_for_list"
                android:src="@drawable/next_btn"
                android:onClick="toListAct"
                android:layout_marginStart="25dp"
                app:layout_constraintTop_toTopOf="@id/listTxt"
                app:layout_constraintStart_toEndOf="@id/listTxt" />

            <TextView
                android:id="@+id/gridTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_grid"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                android:onClick="toGridAct"
                android:fontFamily="@font/poetsen_one_regular"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/listTxt" />

            <ImageView
                android:id="@+id/gridBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/button_for_grid"
                android:src="@drawable/next_btn"
                android:onClick="toGridAct"
                app:layout_constraintTop_toTopOf="@id/gridTxt"
                app:layout_constraintStart_toStartOf="@id/listBtn" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>