<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:background="@drawable/bg_theme"
        tools:context=".view.DogProfile">


        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/back_navigation_button"
            android:src="@drawable/back_btn"
            app:layout_constraintBottom_toTopOf="@+id/guide"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textSize="28sp"
            android:fontFamily="@font/fredoka_variable_font"
            android:layout_marginStart="5dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/backBtn"
            app:layout_constraintBottom_toTopOf="@+id/guide" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/title">

            <androidx.cardview.widget.CardView
                android:id="@+id/imgCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:contentDescription="@string/dog_image"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_launcher_background" />
            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/introDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imgCard"
                app:layout_constraintTop_toTopOf="@id/imgCard">

                <TextView
                    android:id="@+id/breed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/breed_group"
                    android:fontFamily="@font/fredoka_variable_font"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/life"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/life_span"
                    android:fontFamily="@font/fredoka_variable_font"
                    android:textSize="17sp"
                    app:layout_constraintTop_toBottomOf="@id/breed" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:padding="3dp"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:fontFamily="@font/poetsen_one_regular"
                android:textSize="25sp"
                app:layout_constraintTop_toBottomOf="@id/imgCard" />
        </androidx.constraintlayout.widget.ConstraintLayout>
<View
    android:id="@+id/partition"
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_marginTop="5dp"
    android:background="@color/white"
    app:layout_constraintTop_toBottomOf="@id/intro"
    />
        <TextView
            android:id="@+id/moreInfoTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:text="@string/more_information"
            android:textSize="21sp"
            android:textStyle="bold"
            android:fontFamily="@font/fredoka_variable_font"
            app:layout_constraintTop_toBottomOf="@id/partition" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/moreInfo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/moreInfoTxt">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/originTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/origin"
                android:textColor="@color/white"
                android:fontFamily="@font/fredoka_variable_font"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline"/>
            <TextView
                android:id="@+id/origin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Origin"
                android:fontFamily="@font/fredoka_variable_font"
                android:textSize="18sp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/originTitle"
                app:layout_constraintTop_toTopOf="@id/originTitle" />

            <TextView
                android:id="@+id/heightTitle"
                android:layout_width="0dp"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:fontFamily="@font/fredoka_variable_font"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintTop_toTopOf="@id/height" />
            <TextView
                android:id="@+id/height"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/Height"
                android:fontFamily="@font/fredoka_variable_font"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/origin" />

            <TextView
                android:id="@+id/weightTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/weight"
                android:fontFamily="@font/fredoka_variable_font"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintTop_toTopOf="@id/weight" />
            <TextView
                android:id="@+id/weight"
                android:layout_width="0dp"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:text="@string/Weight"
                android:fontFamily="@font/fredoka_variable_font"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/height" />

            <TextView
                android:id="@+id/forTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/breed_for"
                android:fontFamily="@font/fredoka_variable_font"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintTop_toTopOf="@id/forTxt" />
            <TextView
                android:id="@+id/forTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Breed_for"
                android:textColor="@color/white"
                android:fontFamily="@font/fredoka_variable_font"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/weight" />

            <TextView
                android:id="@+id/temperamentTitle"
                android:layout_width="0dp"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:text="@string/temperament"
                android:fontFamily="@font/fredoka_variable_font"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintTop_toTopOf="@id/temperament" />
            <TextView
                android:id="@+id/temperament"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Temperament"
                android:fontFamily="@font/fredoka_variable_font"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/forTxt" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
