<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/newUserDialog"
            android:layout_width="300dp"
            android:layout_height="320dp"
            tools:context=".view.AddUserDialogFragment"
            android:padding="15dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/signupTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fredoka_variable_font"
                android:text="@string/new_user"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:autofillHints="emailAddress"
                android:hint="@string/name"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/person_ic_black"
                android:drawablePadding="5dp"
                android:background="@drawable/bg_edit_text"
                android:inputType="textPersonName"
                android:fontFamily="@font/fredoka_variable_font"
                app:layout_constraintTop_toBottomOf="@id/signupTxt" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:autofillHints="emailAddress"
                android:hint="@string/email"
                android:textColorHint="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:drawableStart="@drawable/mail_ic_black"
                android:drawablePadding="5dp"
                android:background="@drawable/bg_edit_text"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/fredoka_variable_font"
                app:layout_constraintTop_toBottomOf="@id/nameEditText" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="15dp"
                android:autofillHints="password"
                android:drawablePadding="5dp"
                android:hint="@string/password"
                android:textSize="20sp"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:fontFamily="@font/fredoka_variable_font"
                android:background="@drawable/bg_edit_text"
                android:drawableStart="@drawable/lock_ic_black"
                app:layout_constraintTop_toBottomOf="@id/emailEditText" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addUser"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:text="@string/add_user"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:fontFamily="@font/fredoka_variable_font"
                android:background="@drawable/bg_btn_theme"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/passwordEditText"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


</layout>