<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>


        <FrameLayout
            android:id="@+id/item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="165dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="15dp"

                android:layout_marginTop="50dp"
                app:cardElevation="0dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_item_theme"
                    >
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:padding="10dp"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="@color/white"
                        android:gravity="center_horizontal"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/breed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/breed_group"
                        android:textColor="@color/white"
                        android:textSize="13sp"
                        app:layout_constraintTop_toBottomOf="@id/name" />

                    <TextView
                        android:id="@+id/life"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/life_span"
                        android:textColor="@color/white"
                        android:textSize="13sp"
                        app:layout_constraintTop_toBottomOf="@id/breed" />
                </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:cardCornerRadius="100dp"
                android:elevation="2dp"
                android:layout_gravity="center_horizontal">
                <ImageView
                    android:id="@+id/image"
                    android:scaleType="fitXY"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/dog_images"
                    android:src="@drawable/ic_launcher_background"/>
            </androidx.cardview.widget.CardView>



        </FrameLayout>


</layout>