<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/newUserDialog"
        android:layout_width="300dp"
        android:layout_height="260dp"
        tools:context=".view.AddUserDialogFragment"
        android:padding="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/loginTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fredoka_variable_font"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:fontFamily="@font/fredoka_variable_font"
            app:layout_constraintTop_toBottomOf="@id/loginTxt" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:autofillHints="password"
            android:drawablePadding="5dp"
            android:hint="@string/password"
            android:textSize="20sp"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:fontFamily="@font/fredoka_variable_font"
            android:background="@drawable/bg_edit_text"
            android:drawableStart="@drawable/lock_ic_black"
            app:layout_constraintTop_toBottomOf="@id/emailText" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginUser"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:fontFamily="@font/fredoka_variable_font"
            android:background="@drawable/bg_btn_theme"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/passwordEditText"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>